<resources>
    <string name="app_name">ChatMudule</string>
    <string name="dialog_add_friend">添加好友</string>
    <string name="dialog_add_group">添加群组</string>
    <string name="dialog_create_group">创建群组</string>
    <string name="dialog_btn_cancle">取消</string>
    <string name="create_group_avatar">选择群组头像</string>
    <string name="create_groun_name">输入群组名称</string>
    <string name="create_group_signature">群组说明</string>
    <string name="create_group">创建群组</string>
    <string name="base_intro">基本资料</string>
    <string name="join_group">申请加入群组</string>
    <string name="quit_group">退出群组</string>
</resources>
