<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_add_friend"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/dialog_add_friend"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:background="@drawable/button_selector_attention"
        />
    <Button
        android:id="@+id/btn_add_group"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/dialog_add_group"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:background="@drawable/button_selector_attention"
        />
    <Button
        android:id="@+id/btn_create_group"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/dialog_create_group"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:background="@drawable/button_selector_attention"
        />
    <Button
        android:id="@+id/btn_cancle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/dialog_btn_cancle"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:background="@drawable/button_selector_attention"
        />

</LinearLayout>
