<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/color_tab"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        >
        <Button
            android:id="@+id/is_show_add"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="Back"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_back"/>
        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/address_book_title"
            android:text="@string/create_group"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/group_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:onClick="choosePic"
            android:src="@drawable/default_avatar" />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/balck"
            android:text="@string/create_group_avatar"/>

    </LinearLayout>

    <!--用户名编辑框-->
    <EditText
        android:id="@+id/login_input_groupname"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_selector"
        android:hint="@string/create_groun_name"
        android:minHeight="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="60dp"
        android:singleLine="true"
        android:textColor="@color/balck"
        android:textColorHint="#95A1AA"
        android:textCursorDrawable="@drawable/edittext_cursor" />


    <android.support.v7.widget.CardView
        android:layout_width="380dp"
        android:layout_height="200dp"

        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:id="@+id/cv"
        app:cardBackgroundColor="@color/color_tab"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/group_signature"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_group_signature"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/balck"
                android:paddingTop="10dp"
                android:background="@null"
                android:paddingLeft="10dp"
                android:maxLines="20"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_create"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:onClick="SaveToDB"
            android:background="@drawable/ic_create_group"/>
    </LinearLayout>
</LinearLayout>

</layout>